--- a/electron/styles.css
+++ b/electron/styles.css
@@ -9,10 +9,14 @@
 .console {
   font-family: monospace;
   border: solid 1px rgb(0, 0, 0);
-  height: 100px;
+  height: 200px;
   width: 100%;
   overflow-y: scroll;
   overflow-wrap: normal;
+}
+.settings-container {
+  display: none;
+  flex-direction: column;
 }
 
 #canvas {
