--- a/electron/styles.css
+++ b/electron/styles.css
@@ -1,6 +1,13 @@
+body {
+  background-color: #252526;
+}
+
 .menu-container {
   display: flex;
   flex-direction: row;
+  background-color: #3d3d3d;
+  padding: 10px;
+  border-radius: 15px;
 }
 .menu-button .menu-select {
   margin-right: 5px;
@@ -17,6 +24,16 @@
 .settings-container {
   display: none;
   flex-direction: column;
+  background-color: #3d3d3d;
+  padding: 10px;
+  border-radius: 15px;
+}
+.object-data-container {
+  display: flex; 
+  flex-direction: column;
+  background-color: #3d3d3d;
+  padding: 10px;
+  border-radius: 15px;
 }
 
 #canvas {
