--- a/electron/styles.css
+++ b/electron/styles.css
@@ -8,16 +8,22 @@ body {
   background-color: #3d3d3d;
   padding: 10px;
   border-radius: 15px;
+  margin: 4px;
 }
-.menu-button .menu-select {
+.menu-button, .menu-select {
   margin-right: 5px;
-  border: solid 1px rgb(0, 0, 0);
+  border: none;
+  background-color: rgb(134, 134, 134);
+  padding: 5px;
+  border-radius: 15px;
 }
 .console {
   font-family: monospace;
-  border: solid 1px rgb(0, 0, 0);
-  height: 200px;
-  width: 100%;
+  border: solid 3px rgb(0, 0, 0);
+  margin: 3px;
+  border-radius: 15px;
+  height: 100px;
+  width: 80%;
   overflow-y: scroll;
   overflow-wrap: normal;
 }
@@ -27,6 +33,7 @@ body {
   background-color: #3d3d3d;
   padding: 10px;
   border-radius: 15px;
+  margin: 4px;
 }
 .object-data-container {
   display: flex; 
@@ -34,11 +41,21 @@ body {
   background-color: #3d3d3d;
   padding: 10px;
   border-radius: 15px;
+  margin: 4px;
+}
+
+input {
+  margin: 5px;
+  border: none;
+  background-color: rgb(134, 134, 134);
+  padding: 5px;
+  border-radius: 15px;
 }
 
 #canvas {
-  border: solid 1px rgb(0, 0, 0);
-  width: 480px;
+  border: solid 3px rgb(0, 0, 0);
+  border-radius: 15px;
+  width: 620px;
   height: 480px;
 }
 
